# swallow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.org  index.html  params.json
repl/: CMakeLists.txt  ConsoleWriter.cpp  ConsoleWriter.h  REPL.cpp  REPL.h  main.cpp
src/: .gitignore  CMakeLists.txt  build  main.cpp  node-gen  swift_conf.h  swift_errors.h  swift_types.h
src/ast/: ArrayLiteral.cpp  ArrayLiteral.h  ArrayType.cpp  ArrayType.h  Attribute.h  BinaryOperator.cpp  BinaryOperator.h  BreakStatement.cpp  CaseStatement.cpp  ClassDef.cpp  Comment.cpp  ConditionalOperator.cpp  Constants.h  Declaration.h  DeinitializerDef.cpp  DynamicType.h  EnumCasePattern.cpp  Expression.h  FallthroughStatement.cpp  FallthroughStatement.h  FloatLiteral.cpp  ForInLoop.cpp  ForcedValue.cpp  FunctionCall.cpp  FunctionDef.h  FunctionType.cpp  FunctionType.h  GenericArgument.h  GenericConstraint.cpp  GenericConstraint.h  GenericParameters.cpp  GenericParameters.h  IfStatement.cpp  IfStatement.h  ImplicitlyUnwrappedOptional.cpp  Import.cpp  InOutParameter.cpp  InitializerDef.h  InitializerReference.h  IntegerLiteral.cpp  (+226 more)
src/common/: AutoReleasePool.cpp  AutoReleasePool.h  CompilerResults.cpp  auto-release-pool.cpp  compiler_results.cpp  compiler_results.h
src/parser/: Parser.cpp  Parser.h  parser.cpp  parser.h  parser_attribute.cpp  parser_declaration.cpp  parser_details.h  parser_expression.cpp  parser_generic.cpp  parser_pattern.cpp  parser_statement.cpp  parser_type.cpp  symbol-registry.cpp  symbol-registry.h
src/semantics/: FunctionOverloadedSymbol.cpp  FunctionOverloadedSymbol.h  FunctionSymbol.cpp  ScopeOwner.cpp  ScopedNodes.cpp  ScopedNodes.h  SemanticNodeVisitor.cpp  SymbolResolveAction.cpp  SymbolResolveAction.h  Type.cpp  Type.h  TypeInferenceAction.cpp  TypeInferenceAction.h  function-overloaded-symbol.cpp  function-overloaded-symbol.h  function-symbol.cpp  function-symbol.h  scope-guard.cpp  scope-owner.cpp  scoped-node-factory.cpp  scoped-node-factory.h  scoped-nodes.cpp  scoped-nodes.h  semantic-node-visitor.cpp  semantic-node-visitor.h  semantic-types.h  symbol-identifier.h  symbol-registry.cpp  symbol-registry.h  symbol-resolve-action.cpp  symbol-resolve-action.h  symbol-scope.cpp  symbol-scope.h  symbol.h  type-inference-action.cpp  type-inference-action.h  type.cpp  type.h
src/tests/: test-class.cpp  test-closure.cpp  test-declaration.cpp  test-enum.cpp  test-extension.cpp  test-func.cpp  test-generic.cpp  test-literal-expression.cpp  test-literal-expression.h  test-operator-expression.cpp  test-operator-expression.h  test-parser.cpp  test-postfix-expression.cpp  test-postfix-expression.h  test-protocol.cpp  test-statement.cpp  test-statement.h  test-tokenizer.cpp  test-type.cpp  test-type.h  utils.cpp  utils.h
src/tokenizer/: Tokenizer.cpp  token_char_types.h  tokenizer.cpp  tokenizer.h  tokens.h
swallow/: .dir-locals.el  .ycm_extra_conf.py  CMakeLists.txt  build-xcode  main.cpp  swallow_conf.h  swallow_types.h  swift_conf.h  swift_errors.h  swift_types.h
swallow/ast/: ArrayLiteral.cpp  ArrayLiteral.h  ArrayType.cpp  ArrayType.h  Assignment.cpp  Assignment.h  Attribute.cpp  Attribute.h  BinaryOperator.cpp  BinaryOperator.h  BooleanLiteral.cpp  BreakStatement.cpp  BreakStatement.h  CaseStatement.cpp  CaseStatement.h  ClassDef.cpp  ClassDef.h  Closure.cpp  Closure.h  CodeBlock.cpp  CodeBlock.h  Comment.cpp  Comment.h  CompileConstant.cpp  CompileConstant.h  ComputedProperty.cpp  ComputedProperty.h  ConditionalOperator.cpp  ConditionalOperator.h  Constant.cpp  Constant.h  Constants.cpp  ContinueStatement.cpp  ContinueStatement.h  Declaration.cpp  Declaration.h  DeinitializerDef.cpp  DeinitializerDef.h  DictionaryLiteral.cpp  DictionaryLiteral.h  (+150 more)
swallow/common/: CompilerResults.cpp  CompilerResults.h  Errors.cpp  Errors.h  ScopedValue.h  SwallowUtils.cpp  SwallowUtils.h
swallow/includes/: SwallowCompiler.h  swallow_conf.h  swallow_types.h
swallow/parser/: Parser.cpp  Parser.h  Parser_Attribute.cpp  Parser_Declaration.cpp  Parser_Details.h  Parser_Expression.cpp  Parser_Pattern.cpp  Parser_Statement.cpp  Parser_Type.cpp  parser.cpp  parser.h  parser_attribute.cpp  parser_declaration.cpp  parser_details.h  parser_expression.cpp  parser_pattern.cpp  parser_statement.cpp  parser_type.cpp
swallow/semantics/: CollectionTypeAnalyzer.cpp  CollectionTypeAnalyzer.h  CompilerResultEmitter.cpp  CompilerResultEmitter.h  FunctionIterator.cpp  FunctionIterator.h  FunctionOverloadedSymbol.cpp  FunctionOverloadedSymbol.h  FunctionSymbol.cpp  FunctionSymbol.h  GenericArgument.cpp  GenericArgument.h  GenericDefinition.cpp  GenericDefinition.h  GlobalScope.cpp  GlobalScope.h  OperatorResolver.cpp  ScopeGuard.cpp  ScopeGuard.h  ScopeOwner.cpp  ScopeOwner.h  ScopedNodeFactory.cpp  ScopedNodeFactory.h  ScopedNodes.cpp  ScopedNodes.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer_Condition.cpp  SemanticAnalyzer_Expression.cpp  SemanticAnalyzer_Function.cpp  SemanticAnalyzer_FunctionCall.cpp  SemanticAnalyzer_Literal.cpp  SemanticAnalyzer_Loop.cpp  SemanticAnalyzer_Modifiers.cpp  SemanticAnalyzer_Operators.cpp  SemanticAnalyzer_TypeCreation.cpp  SemanticAnalyzer_Variables.cpp  SemanticNodeVisitor.cpp  SemanticNodeVisitor.h  SemanticPass.cpp  (+22 more)
swallow/src/: SwallowCompiler.cpp
swallow/tests/: .gitignore  CMakeLists.txt  runtime.swift  tests.cpp  utils.cpp  utils.h
swallow/tokenizer/: Token.h  Tokenizer.cpp  Tokenizer.h  token_char_types.h
tests/parser/: CMakeLists.txt  TestClass.cpp  TestClosure.cpp  TestDeclaration.cpp  TestEnum.cpp  TestExtension.cpp  TestFunc.cpp  TestGeneric.cpp  TestLiteralExpression.cpp  TestOperatorExpression.cpp  TestParser.cpp  TestPostfixExpression.cpp  TestProtocol.cpp  TestStatement.cpp  TestType.cpp
tests/semantics/: .gitignore  CMakeLists.txt  TestCollection.cpp  TestCondition.cpp  TestConstantFolding.cpp  TestEnumeration.cpp  TestExtension.cpp  TestFunctionOverloads.cpp  TestGeneric.cpp  TestGeneric_GenericConstraint7.swift  TestLoop.cpp  TestMethods.cpp  TestOperators.cpp  TestOptional.cpp  TestProperties.cpp  TestProtocol.cpp  (+7 more)
(+467 files in other folders)
